[~] Fixed mobile menu on iphone

--- a/app/client/src/scss/layout/Header.scss
+++ b/app/client/src/scss/layout/Header.scss
@@ -21,6 +21,7 @@
         .nav_brand{
             height: 100px;
             width: auto;
+            max-width: calc(100vw - 80px);
             flex-shrink: 0;
             padding: 10px 30px 10px 10px;
             transition: height 0.2s ease-in-out;
@@ -67,6 +68,10 @@
 
             .menu--fixed &{
                 height: 50px;
+            }
+
+            @include media(max-medium) {
+                padding: 10px;
             }
         }
 
@@ -117,6 +122,7 @@
                     overflow: hidden;
                     position: absolute;
                     top: 100px;
+                    left: 0;
                     height: 50px;
                     width: 100%;
                     display: flex;
